--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Store and manipulate lists of arbitrary items using accompanying numerical priority levels",
   "main": "priority-queue.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint --fix -- src/*"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,12 @@
   "bugs": {
     "url": "https://gist.github.com/6570bfd7333f867664d1f71bad6e93b9"
   },
-  "homepage": "https://gist.github.com/6570bfd7333f867664d1f71bad6e93b9"
+  "homepage": "https://gist.github.com/6570bfd7333f867664d1f71bad6e93b9",
+  "devDependencies": {
+    "eslint": "^8.34.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-promise": "^6.1.1"
+  }
 }
