--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Store and manipulate lists of arbitrary items using accompanying numerical priority levels",
   "main": "priority-queue.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint --fix -- src/*"
+    "lint": "eslint --fix -- src/* test/*",
+    "test": "jest test/*"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,7 @@
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.6.1",
-    "eslint-plugin-promise": "^6.1.1"
+    "eslint-plugin-promise": "^6.1.1",
+    "jest": "^29.4.3"
   }
 }
