--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,13 @@
         "curly": [
             "error",
             "all"
+        ],
+        "no-unused-vars": [
+          "error",
+          {
+            "argsIgnorePattern": "^_",
+            "varsIgnorePattern": "^_"
+          }
         ]
     }
 }
